# Ublox-Galileo-Solver

./: CMakeLists.txt  README.md
data/: output_navdata.txt
include/: galileo_solver.h
src/: CMakeLists.txt  a.out  deneme.cpp  galileo_parser.cc  galileo_parser.h  galileo_solver.cc  galileo_solver.cpp  galileo_solver.h  main.cc  main.cpp  test.cpp
test/: unit_tests.cpp
